2010-09-03  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* src/libYARP_OS/src/BottleImpl.cpp: correctly copy an
	empty Bottle (thanks Carlo Ciliberto, Ugo Pattacini)

	* src/libYARP_dev/src/RemoteControlBoard.cpp: as for
	ServerControlBoard.cpp

	* src/libYARP_dev/src/ServerControlBoard.cpp: adapt to
	recent elimination of indirect ACE dependencies (thanks
	Ugo Pattacini)

2010-09-01  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* example/swig/yarp.i: tell swig not to freak out about
	API tags (thanks Lars Schillingmann)

2010-08-31  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/template/yarp_config_api.h.in: preparation for
	explicitly tagging public API.

	* src/libYARP_OS/include/yarp/os/Run.h: make sendToServer
	public (Anne van Rossum has established a use-case for it).

2010-08-30  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpDescribe.cmake, conf/YarpVersion.cmake: bring back 
	sonames (thanks Anne van Rossum)

2010-08-27  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* src/carriers/tcpros_carrier/CMakeLists.txt: make tcpros_carrier's
	dependency on wire_rep_utils explicit, to fix static library
	build (thanks Giorgio Metta).

	* example/yayarpview: add copyright/license for Renaud Detry's code.

2010-08-26  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* src/libYARP_OS/src/Carriers.cpp, Network.cpp: make a fix that
	may help with bug #615420 of MORSE (thanks for reporting from
	Gilberto Echeverria, Arnaud Degroote, Breno Carneiro Pinheiro).
	The Blender game engine initializes/finalizes python modules in an
	odd way.

	* src/libYARP_OS/CMakeLists.txt: (and many other files) 
	added code to respect LIB_SUFFIX setting, so on 64-bit
	systems libraries can be installed directly to lib64
	(thanks Anne van Rossum)

2010-08-25  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Network.cpp: clean up global name client